<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation.xml"
    app:startDestination="@id/meterDataListFragment">

    <fragment
        android:id="@+id/meterDataListFragment"
        android:name="com.sergeyrodin.electricitymeter.meterdata.list.MeterDataListFragment"
        android:label="@string/meter_data_title">
        <action
            android:id="@+id/action_meterDataListFragment_to_addEditMeterDataFragment"
            app:destination="@id/addEditMeterDataFragment" />
        <action
            android:id="@+id/action_meterDataListFragment_to_addMeterDataFragment"
            app:destination="@id/addMeterDataFragment" />
    </fragment>
    <fragment
        android:id="@+id/paidListFragment"
        android:name="com.sergeyrodin.electricitymeter.paidlist.PaidListFragment"
        android:label="@string/paid_dates">
        <action
            android:id="@+id/action_paidListFragment_to_meterDataHistoryFragment"
            app:destination="@id/meterDataHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditMeterDataFragment"
        android:name="com.sergeyrodin.electricitymeter.meterdata.edit.EditMeterDataFragment"
        android:label="@string/edit_data"
        tools:layout="@layout/edit_meter_data_fragment">
        <action
            android:id="@+id/action_addEditMeterDataFragment_to_meterDataListFragment"
            app:destination="@id/meterDataListFragment" />
        <argument
            android:name="meterDataId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/meterDataHistoryFragment"
        android:name="com.sergeyrodin.electricitymeter.history.MeterDataHistoryFragment"
        android:label="@string/meter_data_history"
        tools:layout="@layout/meter_data_history_fragment" >
        <argument
            android:name="paidDateId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/addMeterDataFragment"
        android:name="com.sergeyrodin.electricitymeter.meterdata.add.AddMeterDataFragment"
        android:label="@string/add_data"
        tools:layout="@layout/add_meter_data_fragment">
        <action
            android:id="@+id/action_addMeterDataFragment_to_meterDataListFragment"
            app:destination="@id/meterDataListFragment" />
    </fragment>
    <fragment
        android:id="@+id/priceFragment"
        android:name="com.sergeyrodin.electricitymeter.prices.price.PriceFragment"
        android:label="@string/set_kwh_price"
        tools:layout="@layout/price_fragment" >
        <action
            android:id="@+id/action_priceFragment_to_priceListFragment"
            app:destination="@id/priceListFragment"
            app:popUpTo="@id/meterDataListFragment" />
    </fragment>
    <fragment
        android:id="@+id/priceListFragment"
        android:name="com.sergeyrodin.electricitymeter.prices.list.PriceListFragment"
        android:label="@string/prices"
        tools:layout="@layout/price_list_fragment">
        <action
            android:id="@+id/action_priceListFragment_to_priceFragment"
            app:destination="@id/priceFragment" />
    </fragment>
</navigation>