<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.sergeyrodin.electricitymeter.prices.price.PriceViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".prices.price.PriceFragment">

        <EditText
            android:id="@+id/price_edit"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="numberDecimal" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_price_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/save_price"
            android:onClick="@{() -> viewModel.onSaveFabClick(priceEdit.getText().toString())}"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            app:srcCompat="@drawable/ic_done" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>