<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.sergeyrodin.electricitymeter.meterdata.edit.AddEditMeterDataViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".meterdata.edit.AddEditMeterDataFragment">

        <EditText
            android:id="@+id/meter_data_edit"
            android:text="@{viewModel.data}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:inputType="numberDecimal"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_meter_data_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="bottom|end"
            android:onClick='@{() -> viewModel.onSaveMeterData(meterDataEdit.getText().toString())}'
            app:srcCompat="@drawable/ic_done"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            android:contentDescription="@string/add_meter_data" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>