...
            name="calculator"
            type="com.sergeyrodin.electricitymeter.utils.MeterDataCalculator" />
    </data>

    <merge>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/data_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
...
            tools:text="Total: 123 kWh" />

        <TextView
            android:id="@+id/no_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_items"
            android:textSize="20sp"
            android:visibility="@{calculator.noItems ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
...
